unify prefmon-rca & prefmon repositories